--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,9 +29,12 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.android.support:design:22.2.0'
+    compile 'com.android.support:recyclerview-v7:22.2.0'
     compile 'com.jakewharton:butterknife:6.1.0'
+    compile 'de.greenrobot:eventbus:2.4.0'
     compile 'org.twitter4j:twitter4j-core:4.0.4'
     compile 'org.twitter4j:twitter4j-async:4.0.4'
+    compile 'org.twitter4j:twitter4j-stream:4.0.4'
     compile 'com.michaelpardo:ollie:0.3.2-SNAPSHOT'
     provided 'com.michaelpardo:ollie-compiler:0.3.2-SNAPSHOT'
 }
