--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:theme="@style/AppThemeDark" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:launchMode="singleTask" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -19,6 +20,10 @@
             android:name=".AuthActivity"
             android:label="@string/title_activity_auth" >
         </activity>
+        <service
+            android:name=".Twitter.TwinownService"
+            android:enabled="true"
+            android:exported="false" >
+        </service>
     </application>
-
 </manifest>
