--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             android:label="@string/title_activity_auth" >
         </activity>
         <service
-            android:name=".Twitter.TwinownService"
+            android:name=".twinown_twitter.TwinownService"
             android:enabled="true"
             android:exported="false" >
         </service>
