--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,10 @@
             android:name=".AccountControlActivity"
             android:label="@string/setting_action_account" >
         </activity>
+        <activity
+            android:name=".TabControlActivity"
+            android:label="@string/title_activity_tab_control" >
+        </activity>
     </application>
 
 </manifest>
