--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 22
-    buildToolsVersion "23.0.0 rc3"
+    buildToolsVersion "23"
     repositories {
         mavenCentral()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
@@ -11,8 +11,8 @@ android {
         applicationId "jp.unknown.works.twinown"
         minSdkVersion 19
         targetSdkVersion 22
-        versionCode 18
-        versionName "0.3.5"
+        versionCode 19
+        versionName "0.3.6"
     }
     buildTypes {
         release {
