--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,24 +1,19 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
+    compileSdkVersion 23
     buildToolsVersion "23"
     repositories {
         mavenCentral()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+        maven { url 'https://dl.bintray.com/alexeydanilov/maven' }
     }
     defaultConfig {
         applicationId "jp.unknown.works.twinown"
         minSdkVersion 19
-        targetSdkVersion 22
-        versionCode 20
-        versionName "0.3.7"
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
+        targetSdkVersion 23
+        versionCode 21
+        versionName "0.4"
     }
     packagingOptions {
         exclude 'META-INF/LICENSE.txt'
@@ -27,9 +22,9 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.2.1'
-    compile 'com.android.support:design:22.2.1'
-    compile 'com.android.support:recyclerview-v7:22.2.1'
+    compile 'com.android.support:appcompat-v7:23.0.0'
+    compile 'com.android.support:design:23.0.0'
+    compile 'com.android.support:recyclerview-v7:23.0.0'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'de.greenrobot:eventbus:2.4.0'
     compile 'org.twitter4j:twitter4j-core:4.0.4'
@@ -38,4 +33,5 @@ dependencies {
     compile 'com.michaelpardo:ollie:0.3.2-SNAPSHOT'
     provided 'com.michaelpardo:ollie-compiler:0.3.2-SNAPSHOT'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.github.chrisbanes.photoview:library:1.2.4'
 }
