--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,10 @@
             android:label="@string/title_activity_appearance_control" >
         </activity>
         <activity
+            android:name=".TwitterControlActivity"
+            android:label="@string/title_activity_twitter_control" >
+        </activity>
+        <activity
             android:name=".UserActivity"
             android:label="@string/title_activity_user" >
         </activity>
